# kernels

examples/kernels/relu-tvm-ffi/tests/: test_relu.py
examples/kernels/relu-tvm-ffi/tvm-ffi-ext/relu_tvm_ffi/layers/: __init__.py
kernels/: pyproject.toml
kernels/src/kernels/: compat.py  jax_tvm_ffi.py  utils.py
kernels/tests/: test_tvm_ffi.py
