[project]
name = "kernels"
version = "0.13.0.dev0"
description = "Download compute kernels"
authors = [
  { name = "Daniel de Kok", email = "daniel@huggingface.co" },
  { name = "David Holtz", email = "david@huggingface.co" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
  "huggingface_hub>=1.3.0,<2.0",
  "packaging>=20.0",
  "pyyaml>=6",
  "tomli>=2.0; python_version<'3.11'",
  "tomlkit>=0.13.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "mktestdocs>=0.2.5",
  "mypy>=1.15.0",
  "pytest>=8",
  # Whatever version is compatible with pytest.
  "pytest-benchmark",
  "torch>=2.5",
  "apache-tvm-ffi>=0.1.9,<0.2.0",
  "jax-tvm-ffi>=0.1.2",
  "types-pyyaml",
  "types-tabulate",
]

[project.optional-dependencies]
abi-check = ["kernel-abi-check>=0.6.2,<0.7.0"]
benchmark = [
  "matplotlib>=3.7.0",
  "numpy>=2.0.2",
  "tabulate>=0.9.0",
  "torch",
]
torch = ["torch"]
jax = ["jax", "jax-tvm-ffi"]
docs = [
  "hf-doc-builder",
]

[project.scripts]
kernels = "kernels.cli:main"

[project.entry-points."egg_info.writers"]
"kernels.lock" = "kernels.lockfile:write_egg_lockfile"

[tool.setuptools.package-data]
kernels = ["python_depends.json"]

[tool.isort]
profile = "black"
line_length = 119

[tool.ruff]
exclude = [
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".venv*",
  "__pypackages__",
  "_build",
  "build",
  "dist",
  "venv",
]
line-length = 119
# Ignored rules:
# "E501" -> line length violation
lint.ignore = ["E501"]
lint.select = ["E", "F", "W"]
